--- a/View/question.html
+++ b/View/question.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <!-- Portfolio Section-->
-        <section class="page-section portfolio min-vh-100" id="portfolio">
+        <section class="page-section portfolio min-vh-100 align-items-center" id="portfolio">
             <div class="container">
                 <!-- Question Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">
